--- a/views/banksIndex.ejs
+++ b/views/banksIndex.ejs
@@ -14,7 +14,7 @@
         }
     </style>
 
-    <div class="container-fluid p-4 mt-4">
+    <div class="container-fluid p-4 mt-4" style="min-height:100%">
       <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa">&#xf077;</i></button>
         <div class="row">
             <div class="col-md-3 mt-1">
@@ -111,4 +111,5 @@
             </div>
         </div>
     </div>
+
     <script src="javascripts/table.js" charset="utf-8"></script>
