--- a/views/users/forgot.ejs
+++ b/views/users/forgot.ejs
@@ -1,6 +1,6 @@
 <% layout('layouts/boilerplate') -%>
 
-
+<div class="" style="min-height:100%">
 <div class="container bg-light col-sm-6 shadow-sm py-5 my-5">
   <div class="col-10 container">
     <form action="/forgot-password?_method=PUT" method="POST">
@@ -16,4 +16,5 @@
       </div>
     </form>
   </div>
+</div>
 </div>
