--- a/views/users/reset.ejs
+++ b/views/users/reset.ejs
@@ -1,5 +1,6 @@
 <% layout('layouts/boilerplate') -%>
 
+<div class="" style="min-height:100%">
 <div class="container bg-light col-sm-6 py-5 my-5">
   <div class="col-10 container">
     <form action="/reset/<%= token %>?_method=PUT" method="POST">
@@ -19,4 +20,5 @@
       </div>
     </form>
   </div>
+</div>
 </div>
