--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,5 @@
 <% layout('layouts/boilerplate') -%>
+<div style="min-height:100%">
 <div class="container bg-light col-sm-6 py-5 my-5">
         <div class="col-10 container">
     <form action="/login" method="POST">
@@ -21,3 +22,4 @@
         <a href="/forgot-password">Забули пароль?</a>
     </div>
   </div>
+</div>
