--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,4 @@
 
-<div class="container-fluid text-center bg-secondary p-5" style="
- left: 0; bottom: 0; clear: both;">
-  <i style='font-size:24px' class='far'>&#xf1f9; 2020</i>
+<div class="container-fluid text-center border-0 p-4" style="margin-bottom:0;background:#292640">
+  <h4><i style='' class='far'>&#xf1f9; 2020</i>, Україна</h4>
 </div>
