--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,22 +1,23 @@
-html, body{
-  height:100%
+html,
+body {
+    height: 100%
 }
 
 body {
-  margin: 0;
-  position: relative;
-  min-height: 100%;
-  padding: 0px;
-  /* font: 15px "Lucida Grande", Helvetica, Arial, sans-serif; */
-  font: 15px "Trebuchet MS", Arial, Helvetica, sans-serif;
-  background: #191727;
-  color: whitesmoke
+    margin: 0;
+    position: relative;
+    min-height: 100%;
+    padding: 0px;
+    /* font: 15px "Lucida Grande", Helvetica, Arial, sans-serif; */
+    font: 15px "Trebuchet MS", Arial, Helvetica, sans-serif;
+    background: #191727;
+    color: whitesmoke
 }
 
 .row::after {
-  content: "";
-  clear: both;
-  display: table;
+    content: "";
+    clear: both;
+    display: table;
 }
 
 a {
@@ -51,104 +52,140 @@ canvas {
     /* max-height: 300px; */
 }
 
+
 /* TAB */
+
 .tab {
-  overflow: hidden;
-  border: none;
-  background-color: #191727;
+    overflow: hidden;
+    border: none;
+    background-color: #191727;
 }
+
 
 /* Style the buttons that are used to open the tab content */
+
 .tab button {
-  background-color: #191727;
-  color: #00B7FF;
-  float: left;
-  margin-right: 10px;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  padding: 4px 2px;
-  transition: 0.3s;
+    background-color: #191727;
+    color: #00B7FF;
+    float: left;
+    margin-right: 10px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 4px 2px;
+    transition: 0.3s;
 }
+
 
 /* Change background color of buttons on hover */
+
 .tab button:hover {
-  opacity: 0.6;
+    opacity: 0.6;
 }
+
 
 /* Create an active/current tablink class */
+
 .tab button.active {
-  background-color: #191727;
-  opacity: 0.6;
-  border-bottom: solid 3px #00B7FF;
+    background-color: #191727;
+    opacity: 0.6;
+    border-bottom: solid 3px #00B7FF;
 }
+
 
 /* Style the tab content */
-.tabcontent, .tabcontentliabilit, .tabcontentcapital, .tabcontentprofit,
+
+.tabcontent,
+.tabcontentliabilit,
+.tabcontentcapital,
+.tabcontentprofit,
 .contentratio {
-  display: none;
-  padding: 26px 12px;
-  border-bottom: 1px solid #292640;;
-  border-top: none;
+    display: none;
+    padding: 26px 12px;
+    border-bottom: 1px solid #292640;
+    ;
+    border-top: none;
 }
-.tabcontent, .tabcontentliabilit, .tabcontentcapital, .tabcontentprofit,
+
+.tabcontent,
+.tabcontentliabilit,
+.tabcontentcapital,
+.tabcontentprofit,
 .contentratio {
-  animation: fadeEffect 1s; /* Fading effect takes 1 second */
+    animation: fadeEffect 1s;
 }
+
 
 /* Go from zero to full opacity */
+
 @keyframes fadeEffect {
-  from {opacity: 0;}
-  to {opacity: 1;}
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
 
+
 /* accordion */
+
 .accordion {
-  background-color: #191727;
-  color: #00B7FF;
-  cursor: pointer;
-  padding: 10px;
-  margin-bottom: 25px;
-  /* width: 100%; */
-  border: none;
-  text-align: left;
-  outline: none;
-  font-size: 15px;
-  transition: 0.4s;
+    background-color: #191727;
+    color: #00B7FF;
+    cursor: pointer;
+    padding: 10px;
+    margin-bottom: 25px;
+    /* width: 100%; */
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
 }
+
 
 /* .accordion:hover {
   background-color: #ccc;
 } */
 
 .active {
-  outline: none;
-  color:#00B7FF;
+    outline: none;
+    color: #00B7FF;
 }
 
 .panel {
-  padding: 0 18px;
-  /* background-color: white; */
-  max-height: 0;
-  overflow: hidden;
-  transition: max-height 0.2s ease-out;
+    padding: 0 18px;
+    /* background-color: white; */
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
 }
+
 #myBtn {
-display: none;
-position: fixed;
-bottom: 20px;
-right: 30px;
-z-index: 99;
-font-size: 15px;
-border: solid 1px whitesmoke;
-outline: none;
-background-color: rgb(25, 23, 39, 0.3);
-color: white;
-cursor: pointer;
-padding: 10px;
-border-radius: 4px;
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 15px;
+    border: solid 1px whitesmoke;
+    outline: none;
+    background-color: rgb(25, 23, 39, 0.3);
+    color: white;
+    cursor: pointer;
+    padding: 10px;
+    border-radius: 4px;
 }
 
 #myBtn:hover {
-background-color: #555;
+    background-color: #555;
+}
+
+.page-link {
+    background: #191727;
+}
+
+.page-link:hover {
+    background: #292640;
 }
