--- a/views/banksShow1.ejs
+++ b/views/banksShow1.ejs
@@ -18,10 +18,23 @@
             background: #1f1c30;
         }
         
+        .btn-link .fa-search {
+            display: none
+        }
+        
         @media only screen and (max-width: 992px) {
             /* For mobile phones: */
             .col-lg-1 {
                 display: none;
+            }
+        }
+        
+        @media only screen and (max-width: 400px) {
+            .navbar {
+                padding: 0.5rem 0rem
+            }
+            .navbar-expand .navbar-collapse {
+                padding-right: 0px
             }
         }
     </style>
