--- a/public/stylesheets/skeletabs.css
+++ b/public/stylesheets/skeletabs.css
@@ -4,7 +4,7 @@
     margin: 0;
     padding: 0;
     list-style: none;
-    background-image: linear-gradient(45deg, #0047f5, #0047f5 50%, #42bfc7);
+    background-image: linear-gradient(45deg, rgb(4, 4, 102), rgb(4, 4, 102)50%, #5d46e4);
 }
 
 .skltbs-tab-group::after {
@@ -20,7 +20,7 @@
 
 .skltbs-tab {
     display: block;
-    padding: 1em 1.25em;
+    /* padding: .2em 1rem; */
     color: #fff;
     border: 0;
     font-family: inherit;
@@ -39,8 +39,13 @@
 
 .skltbs-panel,
 .skltbs-panel>h3 {
-    padding: 15px 25px;
+    padding: 10px;
     color: #e4dfdf
+}
+
+.skltbs-panel-group {
+    padding: 0em;
+    background-image: linear-gradient(45deg, rgb(4, 4, 102), rgb(4, 4, 102)50%, #5d46e4);
 }
 
 .skltbs-panel-heading {
@@ -56,17 +61,25 @@
     outline: 0;
 }
 
-.skltbs-tab.skltbs-active {
-    color: inherit;
-    font-family: regular, montserrat, sans-serif;
+.skltbs-tab:hover {
     text-decoration: none;
-    background: #e4dfdf;
-    /* background-image: linear-gradient(45deg, #0047f5, #0047f5 50%, #42bfc7); */
+    opacity: 0.5;
+    color: #fff
 }
 
-.skltbs-mode-accordion,
-.skltbs-active {
-    background-image: linear-gradient(45deg, #0047f5, #0047f5 50%, #42bfc7);
+.skltbs-tab.skltbs-active {
+    color: inherit;
+    /* font-family: regular, montserrat, sans-serif; */
+    text-decoration: none;
+    /* border-bottom: #fff solid 2px; */
+    /* margin-bottom: 3px; */
+    /* background: #e4dfdf; */
+    /* background-image: linear-gradient(45deg, #0047f5, #0047f5 50%, #42bfc7); */
+    background-image: linear-gradient(to bottom, rgb(4, 4, 102) 80%, #5d46e4);
+}
+
+.skltbs-mode-accordion {
+    background-image: linear-gradient(to bottom right, rgb(4, 4, 102), #5d46e4);
 }
 
 
