--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -45,10 +45,14 @@
     .navbar-brand:hover {
         opacity: 0.7
     }
+    
+    .navbar a {
+        font-size: 18px
+    }
 </style>
 
 <nav class="navbar navbar-expand border-0" style="background:#292640;">
-    <a class="nav-link" href="/banks "><i class="fas">&#xf66f;</i> Банки</a>
+    <a class="nav-link" href="/banks"><i class="fas">&#xf66f;</i> Банки</a>
     <!-- <button class=" navbar-toggler " type="button " data-toggle="collapse " data-target="#collapsibleNavbar ">
               <i style="font-size:20px; color:#00B7FF " class="fa ">&#xf0c9;</i>
       </button> -->
