--- a/views/index.ejs
+++ b/views/index.ejs
@@ -434,11 +434,13 @@
         </div>
     </div>
     <div class="container-fluid p-3 mt-4">
-        <div class="d-flex justify-content-center mb-4">
+        <div class="d-flex justify-content-center align-items-center mb-4">
             <h1>
                 <%= title %>
             </h1>
-            <button type="button" class="btn btn-link" style="font-size:30px" data-toggle="collapse" data-target="#demo"><i class="material-icons">&#xe88f;</i></button>
+            <button type="button" class="btn btn-link" data-toggle="collapse" data-target="#demo"><svg style="width:30px;height:30px" viewBox="0 0 24 24">
+                <path fill="currentColor" d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z" />
+            </svg></button>
         </div>
         <div class="pr-5 font-italic d-flex justify-content-center" style="padding:0px 50px 0px 0px; opacity:0.5">
             <div class="col-lg-6 collapse" id="demo">
