--- a/views/donate.ejs
+++ b/views/donate.ejs
@@ -20,13 +20,13 @@
           <h2 class="text-center">OTP банк</h2>
             <div class="">
               <div class="d-flex p-3 justify-content-center bg-secondary text-white">
-                <div><span class="mr-2">EUR</span><img src="/images/europe.png" class="mb-1" alt="EU"><span id="p1" class="p-2 m-2"> 4363 2355 1007 4599</span></div><i style="cursor:pointer; opacity:0.5" onclick="copyToClipboard('#p1')" title="Копіювати" class="fa">&#xf0c5;</i>
+                <div><span class="mr-2">EUR</span><img src="/images/europe.png" class="mb-1" alt="EU"><span id="p1" class="p-2 m-2"> </span></div><i style="cursor:pointer; opacity:0.5" onclick="copyToClipboard('#p1')" title="Копіювати" class="fa">&#xf0c5;</i>
               </div>
               <div class="d-flex p-3 justify-content-center bg-secondary text-white">
-                <div><span class="mr-2">USD</span><img src="/images/usa.png" class="mb-1" alt="USA"><span id="p2" class="p-2 m-2"> 4363 2305 1009 2204</span></div><i style="cursor:pointer; opacity:0.5" onclick="copyToClipboard('#p2')" title="Копіювати" class="fa">&#xf0c5;</i>
+                <div><span class="mr-2">USD</span><img src="/images/usa.png" class="mb-1" alt="USA"><span id="p2" class="p-2 m-2"> </span></div><i style="cursor:pointer; opacity:0.5" onclick="copyToClipboard('#p2')" title="Копіювати" class="fa">&#xf0c5;</i>
               </div>
               <div class="d-flex p-3 justify-content-center bg-secondary text-white">
-                <div><span class="mr-2">UAH</span><img src="/images/ukraine.png" class="mb-2" alt="UAH"><span id="p3" class="p-2 m-2"> 4363 2375 1084 0524</span></div><i style="cursor:pointer; opacity:0.5" onclick="copyToClipboard('#p3')" title="Копіювати" class="fa">&#xf0c5;</i>
+                <div><span class="mr-2">UAH</span><img src="/images/ukraine.png" class="mb-2" alt="UAH"><span id="p3" class="p-2 m-2"> </span></div><i style="cursor:pointer; opacity:0.5" onclick="copyToClipboard('#p3')" title="Копіювати" class="fa">&#xf0c5;</i>
               </div>
           </div>
         </div>
