--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,61 +1,1 @@
-<style>
-    ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-    }
-    
-    li {
-        display: inline;
-        padding: 5px;
-    }
-    
-    .donate {
-        display: none;
-    }
-    
-    @media only screen and (max-width: 768px) {
-        /* For mobile phones: */
-        .donate {
-            display: block;
-        }
-        .donat {
-            display: none;
-        }
-    }
-    
-    .navbar-brand:hover {
-        opacity: 0.7
-    }
-</style>
-
-<nav class="navbar navbar-expand-md border-0" style="background:#292640;">
-    <a class="d-flex navbar-brand ml-3 mt-1" href="/">
-        <!-- <img src="/images/logo2.png" alt="Logo" style="width:60px;"> -->
-        <!-- <i class="material-icons text-red rounded-circle bg-warning mt-1" style="font-size:55px;">&#xe6df;</i> -->
-        <img src="/images/8.png" alt="Logo" style="width:35px;height:35px;">
-        <h3 class="pl-2 mt-1" style="font-family:Lucida Sans Unicode;opacity:0.9"><strong>banks<span style="color:#dd2aa2">tour</span></strong></h3>
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-              <i style="font-size:20px; color:#00B7FF" class="fa">&#xf0c9;</i>
-      </button>
-    <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
-        <ul class="navbar-nav justify-content-center">
-            <li class="nav-item"><a class="nav-link" href="/"><i class="fa fa-home"></i></a></li>
-            <li class="nav-item"><a class="nav-link" href="/banks"><i class="fas">&#xf66f;</i> Банки</a></li>
-            <% if(!currentUser){ %>
-                <li class="nav-item"><a class="nav-link" href="/register"> Реєстрація</a></li>
-                <li class="nav-item"><a class="nav-link" href="/login"><i class="fas">&#xf2f6;</i> Вхід</a></li>
-                <% } else { %>
-                    <li class="nav-item"><a class="nav-link" href="/logout">Вихід <i class="fas">&#xf2f5;</i></a></li>
-                    <li class="nav-item"><a class="nav-link" href="/profile"><i class="fa fa-user-circle-o"></i> Вітаю, <%= currentUser.username %>!</a></li>
-                    <% } %>
-                        <li class="nav-item donate">
-                            <a class="nav-link text-warning" href="/donate">Донати</a>
-                        </li>
-        </ul>
-    </div>
-    <li class="nav-item donat justify-content-center">
-        <a class="nav-link btn btn-outline-warning" href="/donate">Донати</a>
-    </li>
-</nav>
+<style>ul{list-style-type: none; margin: 0; padding: 0;}li{display: inline; padding: 5px;}.donate{display: none;}@media only screen and (max-width: 768px){/* For mobile phones: */ .donate{display: block;}.donat{display: none;}}.navbar-brand>img{width: 28px; height: 25px; margin-top: 6px;}.navbar-brand>h3{font-family: Lucida Sans Unicode; opacity: 0.9}.navbar-brand>h3 span{font-family: Lucida Sans Unicode; opacity: 0.9; color: #dbccf7; position: relative}.navbar-brand:hover{opacity: 0.7}.navbar a{font-family: Lucida Sans Unicode; font-size: 18px}</style><nav class="navbar navbar-expand border-0" style="background:#292640;"> <a class="nav-link" href="/banks "><svg style="width:24px;height:24px" viewBox="0 0 24 24"> <path fill="currentColor" d="M6.5,10H4.5V17H6.5V10M12.5,10H10.5V17H12.5V10M21,19H2V21H21V19M18.5,10H16.5V17H18.5V10M11.5,3.26L16.71,6H6.29L11.5,3.26M11.5,1L2,6V8H21V6L11.5,1Z"/> </svg></a> <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar"> <ul class="navbar-nav"> <li class="nav-link"> <a class="d-flex navbar-brand mt-1 mr-0" href="/"> <img src="/images/logo-image.svg" alt="Logo"> <h3 class="pl-2 mt-1"><strong>banks<span>tour</span></strong></h3> </a> </li></ul> </div><button type="button" class="btn btn-link search " data-toggle="collapse" data-target="#demo"><svg style="width:24px;height:24px" viewBox="0 0 24 24"> <path fill="currentColor" d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"/> </svg></button></nav>
