--- a/views/partials/paginateBanks.ejs
+++ b/views/partials/paginateBanks.ejs
@@ -1,13 +1,17 @@
-<div style="margin:20px 0;">
-  <% if(banks.page - 1) { %>
-    <a href="<%= paginateUrl %><%= banks.page - 1 %>"><i class="fas fa-angle-double-left"></i></a>
-  <% } %>
-  <% if(banks.pages > 1 && banks.docs.length) { %>
-  <% for( let i = 1; i <= banks.pages; i++ ) { %>
-    <a href="<%= paginateUrl %><%= i %>"<%= i=== banks.page ? 'style=color:#fff' : ''  %>><%= i %></a>
-  <% } %>
-  <% } %>
-  <% if ((banks.page + 1) <= banks.pages) { %>
-    <a href="<%= paginateUrl %><%= banks.page + 1 %>"><i class="fas fa-angle-double-right"></i></a>
-  <% } %>
+<div class="pagination pagination-sm" style="margin:20px 0;">
+    <% if(banks.page - 1) { %>
+        <a class="page-link" href="<%= paginateUrl %><%= banks.page - 1 %>"><svg style="width:24px;height:24px" viewBox="0 0 24 24">
+            <path fill="currentColor" d="M18.41,7.41L17,6L11,12L17,18L18.41,16.59L13.83,12L18.41,7.41M12.41,7.41L11,6L5,12L11,18L12.41,16.59L7.83,12L12.41,7.41Z" />
+        </svg></a>
+        <% } %>
+            <% if(banks.pages > 1 && banks.docs.length) { %>
+                <% for( let i = 1; i <= banks.pages; i++ ) { %>
+                    <a class="page-link" href="<%= paginateUrl %><%= i %>" <%=i===banks.page ? 'style=color:#fff' : '' %>><%= i %></a>
+                    <% } %>
+                        <% } %>
+                            <% if ((banks.page + 1) <= banks.pages) { %>
+                                <a class="page-link" href="<%= paginateUrl %><%= banks.page + 1 %>"><svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                                    <path fill="currentColor" d="M5.59,7.41L7,6L13,12L7,18L5.59,16.59L10.17,12L5.59,7.41M11.59,7.41L13,6L19,12L13,18L11.59,16.59L16.17,12L11.59,7.41Z" />
+                                </svg></a>
+                                <% } %>
 </div>
