--- a/views/partials/searchFilter.ejs
+++ b/views/partials/searchFilter.ejs
@@ -1,32 +1,34 @@
-<form action="/banks" method="GET"  class="sticky-top">
-  <fieldset>
-    <div class="input-group mb-2">
-    <input type="text" name="search" class="form-control text-light" style="background:#292640;" placeholder="" value="<%= query.search %>" id="search">
-      <div class="input-group-append">
-        <button type="submit" class="btn btn-secondary"><i style="font-size:18px" class="fa">&#xf002;</i></button>
-      </div>
-    </div>
-    <div>
-  		<a href="/banks">Скинути запит</a>
-  	</div>
-  </fieldset><br>
-  <fieldset style="display:none">
-    <legend>Банківські групи</legend>
-    <div class="form-group">
-      <select class="form-control" name="group">
+<form action="/banks" method="GET" class="sticky-top">
+    <fieldset>
+        <div class="input-group mb-2">
+            <input type="text" name="search" class="form-control text-light" style="background:#292640;" placeholder="" value="<%= query.search %>" id="search">
+            <div class="input-group-append">
+                <button type="submit" class="btn btn-secondary"><svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                    <path fill="currentColor" d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" />
+                </svg></button>
+            </div>
+        </div>
+        <div>
+            <a href="/banks">Скинути запит</a>
+        </div>
+    </fieldset><br>
+    <fieldset style="display:none">
+        <legend>Банківські групи</legend>
+        <div class="form-group">
+            <select class="form-control" name="group">
         <option value="Всі банки">Всі банки</option>
         <option value="Банки іноземних банківських груп">Банки іноземних банківських груп</option>
         <option value="Банки з державною часткою">Банки з державною часткою</option>
         <option value="Банки з приватним капіталом">Банки з приватним капіталом</option>
       </select>
-    </div>
-  </fieldset>
-  </form><br>
+        </div>
+    </fieldset>
+</form><br>
 
-  <script type="text/javascript">
+<script type="text/javascript">
     const clear = document.getElementById('clear-group');
-clear.addEventListener('click', (e) => {
-       e.preventDefault();
-       document.querySelector('input[type=radio]:checked').checked = false;
-});
-  </script>
+    clear.addEventListener('click', (e) => {
+        e.preventDefault();
+        document.querySelector('input[type=radio]:checked').checked = false;
+    });
+</script>
